# llm-bridge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude/agents/: gateway-verifier.md  info-architect.md  provider-engineer.md
.github/workflows/: ci.yml  release.yml
config/: default.yaml
docs/: v2ex-post.md
scripts/: test_providers.py
src/llm_bridge/: __init__.py  config.py  default.yaml  main.py  models.py
src/llm_bridge/api/: admin.py  auth.py  chat.py  models.py
src/llm_bridge/auth/: cli_detect.py  manager.py  store.py
src/llm_bridge/convert/: anthropic.py  gemini.py  openai.py  streaming.py
src/llm_bridge/gateway/: middleware.py  rate_limiter.py  router.py
src/llm_bridge/providers/: __init__.py  agy.py  antigravity.py  base.py  claude.py  codex.py  gemini.py
src/llm_bridge/web/: app.py
src/llm_bridge/web/static/: index.html
