[project]
name = "llm-bridge"
version = "0.1.0"
description = "AI Proxy Gateway - unified proxy for multiple AI coding agents with OpenAI-compatible API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx[http2]>=0.28",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "cryptography>=44.0",
    "aiofiles>=24.0",
    "claude-agent-sdk>=0.2.110",
]

[project.scripts]
llm-bridge = "llm_bridge.main:main"

[dependency-groups]
dev = [
    "openai>=1.60",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bridge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
