[project]
name = "llm-bridge"
version = "0.1.2"
description = "Local personal AI gateway: Claude Code, Codex, and Antigravity CLI behind one OpenAI-compatible API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["llm", "gateway", "proxy", "openai-compatible", "claude", "codex", "antigravity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx[http2]>=0.28",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.2.110",
    # Transitive (via claude-agent-sdk -> mcp -> pyjwt[crypto]). cryptography
    # >=49 dropped Intel macOS wheels; keep Intel Macs on 48.x so installs
    # don't require a Rust + OpenSSL build toolchain.
    "cryptography<49; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[project.urls]
Homepage = "https://github.com/mahui/llm-bridge"
Issues = "https://github.com/mahui/llm-bridge/issues"

[project.scripts]
llm-bridge = "llm_bridge.main:main"

[dependency-groups]
dev = [
    "openai>=1.60",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bridge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
